--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "ethers": "^6.6.4",
+    "ethers": "5.6",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
