--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "ethers": "5.6",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@ethersproject/hardware-wallets": "^5.7.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.4",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "autoprefixer": "^10.4.14",
+    "ethers": "^5.7.2",
     "hardhat": "^2.17.0",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3"
