--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/chains": "^0.1.38",
+    "@thirdweb-dev/react": "^3.14.20",
     "alchemy-sdk": "^2.9.2",
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
