--- a/contract/package.json
+++ b/contract/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@anders-t/ethers-ledger": "^1.0.4",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "hardhat": "^2.17.0"
   }
