--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint-config-next": "13.4.10",
     "next": "^13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "@ethersproject/hardware-wallets": "^5.7.0",
