--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@thirdweb-dev/chains": "^0.1.38",
     "@thirdweb-dev/react": "^3.14.20",
     "alchemy-sdk": "^2.9.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "express": "^4.19.2",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,6 +28,7 @@
     "autoprefixer": "^10.4.14",
     "ethers": "^5.7.2",
     "hardhat": "^2.17.0",
+    "nodemon": "^3.1.4",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3"
   }
