--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "next": "^13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sharp": "^0.32.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sharp": "^0.32.4",
+    "thirdweb": "^5.37.0"
   },
   "devDependencies": {
     "@ethersproject/hardware-wallets": "^5.7.0",
