--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^13.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-swipeable": "^7.0.1",
     "sharp": "^0.32.4",
     "thirdweb": "^5.37.0"
   },
