--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@thirdweb-dev/chains": "^0.1.38",
     "@thirdweb-dev/react": "^3.14.20",
     "alchemy-sdk": "^2.9.2",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
