--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "express": "^4.19.2",
+    "lottie-web": "^5.12.2",
     "multer": "^1.4.5-lts.1",
     "next": "^13.1.6",
     "react": "^18.3.1",
