--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.2.5",
     "@thirdweb-dev/chains": "^0.1.38",
     "@thirdweb-dev/react": "^3.14.20",
     "alchemy-sdk": "^2.9.2",
@@ -21,7 +20,7 @@
     "express": "^4.19.2",
     "lottie-web": "^5.12.2",
     "multer": "^1.4.5-lts.1",
-    "next": "^13.1.6",
+    "next": "13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-swipeable": "^7.0.1",
