--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lottie-web": "^5.12.2",
     "multer": "^1.4.5-lts.1",
     "next": "13.2",
+    "next-plausible": "^3.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-swipeable": "^7.0.1",
