--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@thirdweb-dev/chains": "^0.1.38",
+    "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^3.14.20",
     "alchemy-sdk": "^2.9.2",
     "axios": "^1.7.2",
@@ -24,6 +24,7 @@
     "next-plausible": "^3.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-swipeable": "^7.0.1",
     "sharp": "^0.32.4",
     "thirdweb": "^5.37.0"
