update to get to run

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@farcaster/core": "^0.15.6",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^3.14.20",
+    "@vercel/og": "^0.6.4",
     "alchemy-sdk": "^2.9.2",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
