--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/og": "^0.6.4",
     "alchemy-sdk": "^2.9.2",
     "axios": "^1.7.2",
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
