--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@farcaster/core": "^0.15.6",
+    "@farcaster/frame-sdk": "^0.0.5",
     "@napi-rs/canvas": "^0.1.64",
     "@thirdweb-dev/chains": "^0.1.120",
     "@thirdweb-dev/react": "^3.14.20",
