--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_THIRDWEB_ID=00302ae3f2b68d7372491ff064a99189
 NEXT_PUBLIC_CONTRACT_ADDRESS=0x6dA9cF59F0a2C692a2D50b280809c268f2BB8a14
+NEXT_PUBLIC_CONTRACT_ADDRESS_FRONTPAGE=0x0023BdE083caCc676D32c187D1710986141bfC94
 NEXT_PUBLIC_CONTRACT_ADDRESS_TEST=0xa2413ba4bbd8659c31e4f9e44b1dbdd5d7b81d13
 NEXT_PUBLIC_THIRDWEB_ID_TEST=5c7839dc8cf134d6bc159ad38cfb208c
